--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url(./images/background-image.jpg);
+    background-image:url(../images/background-image.jpg);
     width: 100vw;
     height: 100vh;
 }
